dev_templates/vpc.yaml
Parameters:

  ParentVPCStack:
    Description: 'Provide Stack name of parent VPC stack'
    Type: String
    Default: eb-demo
    MinLength: '1'
    MaxLength: '128'
    AllowedPattern: '^[a-zA-Z]+[0-9a-zA-Z\-]*$'

Resources: 
####################### Network Stack ###################################### 
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: dedicated
      Tags:
      - Key: Name
        Value: !Ref ParentVPCStack
  
  PubSuba:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select 
        - 0
        - !GetAZs 
          Ref: 'AWS::Region'
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-public-subnet-a
          - { Name: !Ref ParentVPCStack }

  PubSubb:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select 
        - 1
        - !GetAZs 
          Ref: 'AWS::Region'
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-public-subnet-b
          - { Name: !Ref ParentVPCStack }

  PriSuba:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select 
        - 0
        - !GetAZs 
          Ref: 'AWS::Region'
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-private-subnet-a
          - { Name: !Ref ParentVPCStack }

  PriSubb:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select 
        - 1
        - !GetAZs 
          Ref: 'AWS::Region'
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-private-subnet-b
          - { Name: !Ref ParentVPCStack }
  
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-igw
          - { Name: !Ref ParentVPCStack }

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: IGW

  NATa:
   Type: AWS::EC2::NatGateway
   Properties:
      AllocationId:
         Fn::GetAtt:
         - EIPa
         - AllocationId
      SubnetId:
         Ref: PubSuba
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-nat-a
          - { Name: !Ref ParentVPCStack }
  EIPa:
    Type: AWS::EC2::EIP
    Properties:
        Domain: vpc

  PriRoutea:
    Type: AWS::EC2::Route
    Properties:
        RouteTableId:
          Ref: PriaRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId:
          Ref: NATa

  NATb:
   Type: AWS::EC2::NatGateway
   Properties:
      AllocationId:
         Fn::GetAtt:
         - EIPb
         - AllocationId
      SubnetId:
         Ref: PubSuba
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-nat-b
          - { Name: !Ref ParentVPCStack }
  EIPb:
    Type: AWS::EC2::EIP
    Properties:
        Domain: vpc

  PriRouteb:
    Type: AWS::EC2::Route
    Properties:
        RouteTableId:
          Ref: PribRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId:
          Ref: NATb

  PriaRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-private-subnet-a-rt
          - { Name: !Ref ParentVPCStack }

  PribRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-private-subnet-b-rt
          - { Name: !Ref ParentVPCStack }
  
  PubRoute:
    Type: AWS::EC2::Route
    Properties:
        RouteTableId:
          Ref: PubRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId:
          Ref: IGW

  PubRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub
          - ${Name}-public-rt
          - { Name: !Ref ParentVPCStack }
  
  SubnetRouteTableAssociationpria:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PriSuba
      RouteTableId:
        Ref: PriaRouteTable

  SubnetRouteTableAssociationprib:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PriSubb
      RouteTableId:
        Ref: PribRouteTable

  SubnetRouteTableAssociationpuba:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PubSuba
      RouteTableId:
        Ref: PubRouteTable

  SubnetRouteTableAssociationpubb:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PubSubb
      RouteTableId:
        Ref: PubRouteTable
